--- a/src/App.css
+++ b/src/App.css
@@ -1,51 +1,39 @@
+*{
+  padding: 0%;
+  margin: 0%;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+}
+.header{
+  height: 100vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.title{
+  width: 100vw;
+  padding: 5px;
+  height: 5vh;
+  background-color: #00BFA5;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.title-name{
+  font-size: 24px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
-}
 .App{
   display: flex;
 }
 
-.container{
-  background-color: #61dafb;
-  float: left;
+.left-side{
+  background: #1DE9B6;
   width: 50%;
-  height: 100%;
-}
-.editor{
-  background-color: #6a6c6e;
-  display: inline-block;
-  width: 50%;
-  height: 100%;
+  height: 95vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.right-side{
+  width: 50%;
+  height: 95vh;
+  /* background-color: #A7FFEB; */
+}
+
+.editor{
 }
