--- a/src/components/editor/Editor.css
+++ b/src/components/editor/Editor.css
@@ -1,14 +1,13 @@
-*{
-    font-size: 16px;
-}
 
 .lang-theme{
     display: flex;
+    margin: 5px;
     justify-content: space-around;
-    padding: 5px;
+    padding: 2px;
 }
 
 .lang-theme Button {
     margin-left: 10px;
+    font-size: 10px;
 }
 
