--- a/src/components/homepage/HomePage.css
+++ b/src/components/homepage/HomePage.css
@@ -2,59 +2,73 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background: url('../../assets/bk1.jpg');
+    background-repeat: no-repeat;
+    background-size: 100vw 100vh;
 }
 
-.top-container{
+.home-top-container{
     position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background-image: url(../../assets/bg2.jpg);
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    padding: 40px;
 }
 
-.header{
-    position: absolute;
-    top: -40px;
-    right: 20px;
-    left: 20px;
+.home-header{
     display: flex;
+    width: calc(100vw - 40px);
     justify-content: space-between;
-    margin: 10px;
+    margin: 10px 20px;
     padding: 20px 50px;
     background: rgba(255,255,255, 0.5);
-    box-shadow: 0 15px 35px rgba(255, 255, 255, 0.05);
+    box-shadow: rgba(255,255,255, 0.05);
     border-radius: 20px;
     align-items: center;
 }
 
-.logo{
+.home-logo{
     margin: 10px;
+    background: unset;
 }
 
-.page-route{
+.home-page-route{
     display: flex;
     justify-content: space-around;
     align-items: center;
     margin-right: 10px;
     right: 0;
+    background: unset;
 }
 
-.nav-link{
-    color: black;
-}
-
-.page-route p{
+.home-page-route p{
     margin: 10px;
     font-size: 18px;
     font-weight: 500;
+    background: unset;
+    color: black;
 }
-.page-route p:hover{
+.home-page-route p:hover{
     margin: 10px;
     font-size: 18px;
     color: green;
+}
+
+
+.home-intro{
+    position: absolute;
+    width: calc(100vw - 40px);
+    min-height: 600px;
+    display: flex;
+    margin: 20px;
+    top: 10px;
+    padding: 20px 50px;
+    background: rgba(255,255,255, 0.7);
+    box-shadow: rgba(255,255,255, 0.05);
+    border-radius: 20px;
+}
+
+.home-img{
+    margin-top: 100px;
+    float: right;
+    height: 450px;
+    width: 340px;
+    background: url('../../assets/character.png');
+    background-size: cover;
 }
