--- a/src/components/homepage/HomePage.css
+++ b/src/components/homepage/HomePage.css
@@ -2,73 +2,139 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background: url('../../assets/bk1.jpg');
     background-repeat: no-repeat;
     background-size: 100vw 100vh;
 }
 
+.home-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: url('../../assets/bk1.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    padding: 50px;
+}
+
 .home-top-container{
     position: relative;
+    width: calc(100% - 100px);
+    min-height: calc(100vh - 280px);
+    min-height: 300px;
+    background: rgba(255,255,255, 0.5);
+    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.05);
+    border-radius: 20px; 
+    /* display: flex; */
+    justify-content: space-around;
+    align-items: center;
+    padding: 50px;
 }
 
 .home-header{
-    display: flex;
-    width: calc(100vw - 40px);
-    justify-content: space-between;
-    margin: 10px 20px;
+    position: absolute;
+    top: -40px;
+    right: 20px;
+    left: 20px;
     padding: 20px 50px;
-    background: rgba(255,255,255, 0.5);
-    box-shadow: rgba(255,255,255, 0.05);
-    border-radius: 20px;
+    display: flex;
+    justify-content: space-between;
     align-items: center;
+    background: rgba(255,255,255, 0.2);
+    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.05);
+    border-radius: 20px;
+    backdrop-filter: blur(10px);
+    border: 1px solid rgba(255,255,255, 0.25);
+    border-top: 1px solid rgba(255,255,255, 0.5);
+    border-left: 1px solid rgba(255,255,255, 0.5);
 }
 
 .home-logo{
+    color: black;
+    font-weight: 700;
+    text-decoration: none;
+    font-size: 2em;
     margin: 10px;
-    background: unset;
 }
 
 .home-page-route{
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-right: 10px;
-    right: 0;
-    background: unset;
 }
 
-.home-page-route p{
-    margin: 10px;
-    font-size: 18px;
+.home-page-route li{
+    list-style: none;
+    margin: 0 10px;
+}
+
+.home-page-route li a{
+    text-decoration: none;
     font-weight: 500;
-    background: unset;
-    color: black;
-}
-.home-page-route p:hover{
-    margin: 10px;
-    font-size: 18px;
-    color: green;
+    color: grey;
+    padding: 8px 15px;
+    border-radius: 25px;
 }
 
+.home-page-route li a:hover,
+.home-active{
+    background: white;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+
+.home-section1{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
 .home-intro{
-    position: absolute;
-    width: calc(100vw - 40px);
-    min-height: 600px;
-    display: flex;
-    margin: 20px;
-    top: 10px;
-    padding: 20px 50px;
-    background: rgba(255,255,255, 0.7);
-    box-shadow: rgba(255,255,255, 0.05);
+    max-width: 700px;
+    margin-top: 40px;
+    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
     border-radius: 20px;
+    backdrop-filter: blur(10px);
+    border: 1px solid rgba(255,255,255, 0.25);
+    border-top: 1px solid rgba(255,255,255, 0.5);
+    border-left: 1px solid rgba(255,255,255, 0.5);
+    padding: 40px;
+    padding-left: 110px;
 }
 
-.home-img{
-    margin-top: 100px;
-    float: right;
-    height: 450px;
-    width: 340px;
-    background: url('../../assets/character.png');
-    background-size: cover;
+.home-intro h2{
+    font-size: 3em;
+    color: royalblue;
+}
+
+.home-intro p{
+    font-size: 1.2em;
+    color: slategray;
+}
+
+.home-intro a{
+    display: inline-block;
+    background: white;
+    padding: 15px 30px;
+    font-size: 1.2em;
+    font-weight: 500;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    margin-top: 20px;
+    color: slategray;
+    text-decoration: none;
+    border-radius: 30px;
+}
+
+.home-logo-img img{
+    margin-top: -150px;
+    margin-bottom: 100px;
+    width: 600px;
+    height: auto;
+    animation: animate 5s linear infinite;
+}
+@keyframes animate{
+    0%, 100%{
+        transform: translateY(50px);
+    }
+    50%{
+        transform: translateY(100px);
+    }
 }
