--- a/src/components/homepage/HomePage.css
+++ b/src/components/homepage/HomePage.css
@@ -88,8 +88,9 @@
 }
 
 .home-intro{
-    max-width: 800px;
+    max-width: 700px;
     margin-top: 100px;
+    margin-right: 20px;
     box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
     border-radius: 20px;
     backdrop-filter: blur(10px);
@@ -108,7 +109,7 @@
 }
 
 .home-intro p{
-    font-size: 1.4em;
+    font-size: 1.2em;
     font-weight: 400;
     color: rgb(57,60,75);
 }
@@ -129,7 +130,7 @@
 .home-logo-img img{
     margin-top: -150px;
     margin-bottom: 100px;
-    width: 500px;
+    width: 400px;
     height: auto;
     animation: animate 5s linear infinite;
 }
@@ -148,22 +149,95 @@
     flex-direction: column;
     justify-content: center;
     margin-top: 70px;
-    margin-top: 50px;
-    width: calc(100vw - 100px);
-    transform: translateX(-75px) translateY(100px);
-    border-radius: 40px 40px 0px 0px;
-    background-color: rgba(255,255,255, 0.9);
+    width: calc(100vw - 200px);
+    transform: translateX(-50px) translateY(100px);
 }
 
 .home-services h1{
     font-size: 2.5em;
     color: gray;
-    margin-left: 150px;
+    margin-left: 100px;
 }
 
 .home-services-wrapper{
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.home-services-wrapper div{
+    flex: 1 1 20%;
+    height: 460px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 50px;
+    transition: transform .2s; 
+    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.05);
+    border-radius: 40px;
+    backdrop-filter: blur(10px);
+}
+
+.home-services-wrapper h2{
+    margin-top: 40px;
+    margin-bottom: 10px;
+}
+.home-services-wrapper p{
+    margin: 5px;
+}
+.home-services-wrapper a{
+    width: 150px;
+    background: white;
+    padding: 10px 15px;
+    font-size: 1em;
+    font-weight: 500;
+    background: rgb(57,60,75);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    margin-top: 20px;
+    color: white;
+    text-decoration: none;
+    border-radius: 20px;
+}
+
+.home-service-img{
+    margin-top: 20px;
+    width: 200px;
+    height: auto;
+}
+
+.home-services-code-editor{
+    -webkit-transform: translateZ(0);
+    transform: translateX(-20px) translateY(-20px);
+    background: rgba(255,255,255, 0.75);
+}
+
+.home-services-code-editor:hover{
+    transform: scale(1);
+}
+
+.home-services-face-time{
+    -webkit-transform: translateZ(0);
+    transform: translateX(-20px) translateY(-20px);
+    background: rgba(90,242,206, 0.75);
+}
+
+.home-services-face-time:hover{
+    transform: scale(1);
+}
+
+.home-services-screen-share{
+    -webkit-transform: translateZ(0);
+    transform: translateX(-20px) translateY(-20px);
+    background: rgba(57,132,245, 0.75);
+}
+
+.home-services-screen-share:hover{
+    transform: scale(1);
 }
 
 
