--- a/src/components/interviewPage/InterviewPage.css
+++ b/src/components/interviewPage/InterviewPage.css
@@ -3,41 +3,56 @@
 *{
   padding: 0%;
   margin: 0%;
-
-}
-.header{
-  background: white;
-  height: 100%;
+  box-sizing: border-box;
+  background-repeat: no-repeat;
+  background-size: 100vw 100vh;
 }
 
-.nav-bar{
-  position: fixed;
+.int-header{
+  display: flex;
+  width: 100vw;
+  min-height: 100vh;
+  position: relative;
+  /* background: rgba(255,255,255, 0.5); */
+  background: url('../../assets/bk-light.jpg');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  box-shadow: 0 15px 35px rgba(0, 0, 0, 0.05);
+  /* display: flex; */
+}
+
+.int-nav-bar{
+  position: absolute;
+  top: 0px;
+  right: 20px;
+  left: 20px;
+  margin-top: 10px;
+  padding: 10px 50px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.5rem 2rem;
-  height: 4rem;
-  z-index: 1;
-  width: 100%;
-  top: 0;
-  top: 0;
-  background-image: linear-gradient(to right, #EAE7DC, #EAE7DC)
+  box-shadow: 0 15px 35px rgba(0, 0, 0, 0.05);
+  border-radius: 20px;
+  backdrop-filter: blur(10px);
+  border: 1px solid rgba(212, 212, 212, 0.75);
+  border-top: 1px solid rgba(212, 212, 212, 0.5);
+  border-left: 1px solid rgba(212, 212, 212, 0.5);
 }
 
-.title-name{
+.int-title-name{
   font-size: 24px;
   margin: 10px;
-  color: #E85A4F;
+  color: royalblue;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-.nav-items{
+.int-nav-items{
   display: flex;
   justify-content: center;
-  margin-right: 30px;
 }
 
-.user-name-text{
+.int-user-name-text{
   color: black;
   font-size: 14px;
   font-weight: 700;
@@ -45,36 +60,33 @@
   align-self: center;
 }
 
-.user-image{
-  width: 50px;
-  height: 50px;
+.int-user-image{
+  width: 40px;
+  height: 40px;
   align-self: center;
   border-radius: 100px;
 }
 
-.App{
-  margin-top: 5rem;
+.int-App{
+  margin-top: 85px;
   display: flex;
 }
 
-.left-side{
-  background-color: whitesmoke;
-  width: 49%;
+.int-left-side{
+  left: 0;
+  width: 49vw;
   height: 100%;
-  overflow: scroll;
 }
 
-.divider{
+.int-divider{
   background-color: gray;
   width: 10px;
   height: 100vh;
 }
 
-.right-side{
-  position: fixed;
+.int-right-side{
+  position: sticky;
+  flex: 1 0 49%;
   right: 0;
-  width: 50%;
-  height: 93vh;
-  background-color: #A7FFEB;
 }
 
