--- a/src/components/interviewPage/editor/Editor.css
+++ b/src/components/interviewPage/editor/Editor.css
@@ -11,3 +11,76 @@
     font-size: 10px;
 }
 
+.editor-select-box{
+    width: 175px;
+    position: relative;
+}
+
+.editor-select-box p{
+    font-weight: 500;
+    position: absolute;
+    font-size: 12px;
+    top: -8px;
+    border-radius: 10px;
+    padding: 1px 8px;
+    z-index: 1;
+    color: honeydew;
+    background: grey;
+}
+
+.editor-select-box select{
+    padding: 5px 15px;
+    height: 36px;
+    line-height: 16px;
+    font-size: 14px;
+    width: 100%;
+    background-color: rgba(255,255,255, 0.5);
+    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.05);
+    border-radius: 20px;
+    backdrop-filter: blur(10px);
+    border: 1px solid rgba(255,255,255, 0.25);
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    appearance: none;
+    -webkit-appearance: none;
+}
+.editor-select-box select:focus{
+    border-style: none;
+    outline: none;
+    border: 2px solid royalblue;
+}
+
+.editor-select-box::after{
+    content: "";
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    margin-top: -4px;
+    border-top: 8px solid #ccc;
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    pointer-events: none;
+}
+
+.editor-btn{
+    height: 36px;
+    align-self: center;
+    cursor: pointer;
+    padding: 6px 25px;
+    background-color: rgba(255,255,255, 0.5);
+    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.05);
+    border-radius: 20px;
+    backdrop-filter: blur(10px);
+    border: 1px solid rgba(255,255,255, 0.25);
+}
+
+.editor-btn:hover{
+    border: 1px solid royalblue;
+}
+
+.editor-btn p{
+    font-size: 14px;
+    cursor: pointer;
+}
+
+
