--- a/src/components/interviewPage/InterviewPage.css
+++ b/src/components/interviewPage/InterviewPage.css
@@ -12,7 +12,7 @@
   display: flex;
   width: 100vw;
   min-height: 100vh;
-  position: relative;
+  position: fixed;
   /* background: rgba(255,255,255, 0.5); */
   background: url('../../assets/bk-light.jpg');
   background-size: cover;
@@ -27,7 +27,7 @@
   top: 0px;
   right: 20px;
   left: 20px;
-  margin-top: 10px;
+  margin-top: 5px;
   padding: 10px 50px;
   display: flex;
   justify-content: space-between;
