--- a/src/components/interviewPage/editor/Editor.css
+++ b/src/components/interviewPage/editor/Editor.css
@@ -1,6 +1,7 @@
 .lang-theme{
     display: flex;
     margin: 5px;
+    height: 40px;
     justify-content: space-around;
     padding: 2px;
 }
@@ -83,8 +84,13 @@
 }
 
 .editor-console{
+    float: left;
+    box-sizing: border-box;
+    height: 40px;
     position: relative;
     width: 100%;
+    display: flex;
+    flex-direction: column;
     background: white;
 }
 
