--- a/src/components/interviewPage/InterviewPage.css
+++ b/src/components/interviewPage/InterviewPage.css
@@ -68,25 +68,25 @@
 }
 
 .int-App{
-  margin-top: 85px;
+  margin-top: 80px;
+  height: calc(100vh - 70px);
+  width: 100vw;
   display: flex;
+  flex-direction: row;
 }
 
 .int-left-side{
-  left: 0;
-  width: 49vw;
-  height: 100%;
+  flex-basis: calc(100% - 5px);
+  overflow-y: scroll;
 }
 
-.int-divider{
+.int-gutter{
   background-color: gray;
-  width: 10px;
+  flex-basis: 15px;
   height: 100vh;
 }
 
 .int-right-side{
-  position: sticky;
-  flex: 1 0 49%;
-  right: 0;
+  flex-basis: calc(100% - 5px);
 }
 
