--- a/src/components/interviewPage/editor/Editor.css
+++ b/src/components/interviewPage/editor/Editor.css
@@ -12,14 +12,14 @@
 }
 
 .editor-select-box{
-    width: 175px;
+    width: 135px;
     position: relative;
 }
 
 .editor-select-box p{
     font-weight: 500;
     position: absolute;
-    font-size: 12px;
+    font-size: 10px;
     top: -8px;
     border-radius: 10px;
     padding: 1px 8px;
@@ -32,7 +32,7 @@
     padding: 5px 15px;
     height: 36px;
     line-height: 16px;
-    font-size: 14px;
+    font-size: 13px;
     width: 100%;
     background-color: rgba(255,255,255, 0.5);
     box-shadow: 0 15px 35px rgba(0, 0, 0, 0.05);
@@ -66,7 +66,7 @@
     height: 36px;
     align-self: center;
     cursor: pointer;
-    padding: 6px 25px;
+    padding: 8px 25px;
     background-color: rgba(255,255,255, 0.5);
     box-shadow: 0 15px 35px rgba(0, 0, 0, 0.05);
     border-radius: 20px;
@@ -79,24 +79,24 @@
 }
 
 .editor-btn p{
-    font-size: 14px;
+    font-size: 13px;
     cursor: pointer;
 }
 
 .editor-console{
-    float: left;
     box-sizing: border-box;
-    height: 40px;
-    position: relative;
-    width: 100%;
+    position: absolute;
+    bottom: 0;
+    z-index: 100;
+    width: 50%;
     display: flex;
     flex-direction: column;
     background: white;
+    margin-bottom: 10px;
 }
 
 .editor-console-window{
     width: 100%;
-    bottom: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
